2013-08-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.01beta1 released.

2013-08-29  Carl Hetherington  <cth@carlh.net>

	* Fix emissions of large chunks of silence when
	analysing audio in some cases.

	* Use my @dcpomatic.com email address for now,
	rather than a non-existant mailing list.

2013-08-28  Carl Hetherington  <cth@carlh.net>

	* Initial DCP-o-matic release.
