@@ -90,3 +90,9 @@ Transcoder::video_frames_out () const
 {
 	return _encoder->video_frames_out ();
 }
+
+Encoder::State
+Transcoder::state () const
+{
+	return _encoder->state ();
+}
